Run and fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,6 +19,11 @@
 
     .contact-form .form-control {
         padding: 12px;
+        font-size: 16px;
+    }
+
+    .contact-submit-btn {
+        font-size: 17px;
     }
 
     .footer-icon a {
